@@ -8,7 +8,8 @@
     <tal:block i18n:translate="working_copy_info">
         This item is being edited by
         <a i18n:name="creator"
-           tal:attributes="href view/creator_url" 
+           tal:attributes="href view/creator_url"
+           tal:omit-tag="not: view/creator_url"
            tal:content="view/creator_name">john smith</a>
         in
         <a i18n:name="working_copy"
@@ -22,5 +23,5 @@
 
     (<a i18n:translate="label_view_changes"
          tal:attributes="href string:${context/absolute_url}/@@iterate_diff">View changes</a>)
-    </dd> 
+    </dd>
 </dl>
