@@ -1,29 +1,30 @@
 <dl class="portalMessage info"
      tal:define="baseline view/baseline;"
      i18n:domain="plone">
-     
+
     <dt i18n:translate="">Locked</dt>
-    <dd> 
+    <dd>
     <tal:block i18n:translate="checkout_info">
-     
-        This is a working copy of 
+
+        This is a working copy of
         <a i18n:name="baseline_title"
             tal:attributes="href baseline/@@plone_context_state/view_url;
                             title baseline/Description"
             tal:content="baseline/Title"/>, made by
 
         <a i18n:name="creator"
-            tal:attributes="href view/creator_url" 
+            tal:attributes="href view/creator_url"
+            tal:omit-tag="not: view/creator_url"
             tal:content="view/creator_name">john smith</a>
-    
-        on 
-    
-        <span 
+
+        on
+
+        <span
             i18n:name="created"
             tal:content="view/created"/>.
     </tal:block>
-    
+
     (<a i18n:translate="view_changes"
          tal:attributes="href string:${context/absolute_url}/@@iterate_diff">View changes</a>)
-    </dd> 
+    </dd>
 </dl>
